--- a/week2/task1/task1.ipynb
+++ b/week2/task1/task1.ipynb
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "human-madrid",
+   "id": "educated-patrick",
    "metadata": {},
    "outputs": [
     {
@@ -863,130 +863,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "delayed-apache",
+   "execution_count": 98,
+   "id": "crazy-afternoon",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.11657075758219448,\n",
-       " 0.19777738803029532,\n",
-       " 0.15996056399532876,\n",
-       " 0.20609040268280376,\n",
-       " 0.14004527051866666,\n",
-       " 0.15026685747694313,\n",
-       " 0.20609040268280376,\n",
-       " 0.12477127763327134,\n",
-       " 0.16341484965019626,\n",
-       " 0.189873417721519,\n",
-       " 0.16967762387371021,\n",
-       " 0.18850982361052293,\n",
-       " 0.132601041976097,\n",
-       " 0.1508719887668445,\n",
-       " 0.1756063450112042,\n",
-       " 0.12164187392382353,\n",
-       " 0.17323261808567447,\n",
-       " 0.14123976674418737,\n",
-       " 0.18543183904737315,\n",
-       " 0.12750373890975997,\n",
-       " 0.1628326195551163]"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "cordless-replacement",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.10555511876381107,\n",
-       " 0.11657075758219448,\n",
-       " 0.12164187392382353,\n",
-       " 0.12477127763327134,\n",
-       " 0.12750373890975997,\n",
-       " 0.132601041976097,\n",
-       " 0.14004527051866666,\n",
-       " 0.14123976674418737,\n",
-       " 0.15026685747694313,\n",
-       " 0.1508719887668445,\n",
-       " 0.15996056399532876,\n",
-       " 0.1628326195551163,\n",
-       " 0.16341484965019626,\n",
-       " 0.16967762387371021,\n",
-       " 0.17323261808567447,\n",
-       " 0.1756063450112042,\n",
-       " 0.18543183904737315,\n",
-       " 0.18850982361052293,\n",
-       " 0.189873417721519,\n",
-       " 0.19777738803029532,\n",
-       " 0.20609040268280376]"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cos1.sort()\n",
-    "cos1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "historic-width",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.11657075758219448,\n",
-       " 0.19777738803029532,\n",
-       " 0.15996056399532876,\n",
-       " 0.10555511876381107,\n",
-       " 0.14004527051866666,\n",
-       " 0.15026685747694313,\n",
-       " 0.20609040268280376,\n",
-       " 0.12477127763327134,\n",
-       " 0.16341484965019626,\n",
-       " 0.189873417721519,\n",
-       " 0.16967762387371021,\n",
-       " 0.18850982361052293,\n",
-       " 0.132601041976097,\n",
-       " 0.1508719887668445,\n",
-       " 0.1756063450112042,\n",
-       " 0.12164187392382353,\n",
-       " 0.17323261808567447,\n",
-       " 0.14123976674418737,\n",
-       " 0.18543183904737315,\n",
-       " 0.12750373890975997,\n",
-       " 0.1628326195551163]"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cos"
+    "with open('submission-1.txt', 'w') as file:\n",
+    "    file.write('{} '.format(ind2)+'{}'.format(ind1))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "religious-complaint",
+   "id": "concerned-punch",
    "metadata": {},
    "outputs": [],
    "source": []
