--- a/week2/task1/task2.ipynb
+++ b/week2/task1/task2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "electrical-charm",
+   "id": "defensive-bedroom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "allied-wedding",
+   "id": "corresponding-separation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "durable-galaxy",
+   "id": "scheduled-entertainment",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blessed-worker",
+   "id": "corporate-surfing",
    "metadata": {},
    "source": [
     "## 1й порядок"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "criminal-loading",
+   "id": "english-belfast",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "northern-sphere",
+   "id": "variable-seminar",
    "metadata": {},
    "source": [
     "## 2й порядок"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "loved-tucson",
+   "id": "dated-devices",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polar-paraguay",
+   "id": "backed-boring",
    "metadata": {},
    "source": [
     "## 3й порядок"
@@ -164,17 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "infectious-blake",
+   "execution_count": 109,
+   "id": "balanced-cambodia",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f96719651f0>]"
+       "[<matplotlib.lines.Line2D at 0x7f9671ca6be0>]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -204,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "local-providence",
+   "execution_count": 110,
+   "id": "afraid-webcam",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "array([ 4.36, -1.3 ,  0.19, -0.01])"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,31 +226,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "sweet-mixer",
+   "execution_count": 111,
+   "id": "combined-sculpture",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.float64' object has no attribute '2numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-102-6805aef4bebd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'submission-2.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{.2numpy.float64} '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msol3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'{.2f64} '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msol3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.float64' object has no attribute '2numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('submission-2.txt', 'w') as file:\n",
-    "    file.write('{}')"
+    "    file.write('{} '.format(sol3[0]) + '{} '.format(sol3[1]) +'{} '.format(sol3[2]) +'{} '.format(sol3[3]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "normal-candle",
+   "id": "julian-communication",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -258,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opponent-asbestos",
+   "id": "rational-carol",
    "metadata": {},
    "outputs": [],
    "source": []
