--- a/week3/task2.ipynb
+++ b/week3/task2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "expected-delta",
+   "id": "accompanied-daniel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "novel-tours",
+   "id": "inclusive-directive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legal-surrey",
+   "id": "challenging-click",
    "metadata": {},
    "source": [
     "# Task2: Global optimization"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "mexican-economy",
+   "id": "greek-martin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "electrical-sally",
+   "id": "turkish-library",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "personalized-receipt",
+   "id": "modular-grenada",
    "metadata": {},
    "outputs": [
     {
@@ -93,13 +93,14 @@
    "source": [
     "res = differential_evolution(fun, [(0,30)])\n",
     "answ = res['fun'][0]\n",
-    "res"
+    "res\n",
+    "# передается список кортежей - границ оптимизации, сколько кортежей - столько переменных у функции"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "falling-playing",
+   "id": "demanding-large",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inside-cannon",
+   "id": "proper-agriculture",
    "metadata": {},
    "outputs": [],
    "source": []
