--- a/week3/task1.ipynb
+++ b/week3/task1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "liberal-surgeon",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "preliminary-gardening",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "physical-member",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "fiscal-burton",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "equivalent-wholesale",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "        x: array([25.88018592])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "id": "accurate-bones",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "        x: array([4.13627619])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
+   "id": "hispanic-empty",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.745268290344928"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answ1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "suspended-ocean",
    "metadata": {},
    "outputs": [
@@ -153,7 +174,7 @@
        "        x: array([25.880193])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,19 +188,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "hawaiian-canal",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('submission_1.txt', 'w') as file:\n",
-    "    file.write('{:.2f} '.format(answ1) +' ' +'{:.2f}'.format(answ2))"
+    "    file.write('{:.2f} '.format(answ1) +'{:.2f}'.format(answ2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "mobile-complexity",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-11.898894665981322"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answ2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mobile-complexity",
+   "id": "fleet-certification",
    "metadata": {},
    "outputs": [],
    "source": []
